<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="tab_account">账户</string>
    <string name="tab_discover">发现音乐</string>
    <string name="tab_music">我的音乐</string>
    <string name="tab_friend">朋友</string>
    <string name="drawlayout_title">登录我的音乐，助攻打通任督二脉，飞升上神</string>
    <string name="login">登录</string>
    <string name="search_hint">搜索喜欢的歌手，歌曲</string>
    <string name="viewpager_music">歌单</string>
    <string name="viewpager_top">排行榜</string>
    <string name="viewpage_recommand">个性推荐</string>
    <string name="main_recommand_fm">私人FM</string>
    <string name="main_recommand_daily">每日歌曲推荐</string>
    <string name="main_recommand_rank">云音乐新歌榜</string>
    <string name="mymusic_item01">本地音乐</string>
    <string name="mymusic_item02">最近播放</string>
    <string name="mymusic_item03">下载管理</string>
    <string name="mymusic_item04">我的电台</string>
    <string name="mymusic_item05">我的收藏</string>
    <string name="permissons_toast">权限数值不合法</string>
    <string name="bottom_next">"下一首播放"</string>
    <string name="bottom_ring">"设为铃声"</string>
    <string name="bottom_description">"查看歌曲信息"</string>
    <string name="bottom_delete">"删除"</string>
    <string name="bottom_favourite">"收藏到歌单"</string>
    <string name="bottom_title">"歌曲："</string>
    <string name="no_pre_music">"没有上一首歌曲了"</string>
    <string name="no_next_music">"没有下一首歌曲了"</string>
</resources>
