<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center">
    <TextView
        android:id="@+id/current_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/next_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:drawableLeft="@drawable/nextmusic"
        android:textSize="15dp"
        android:text="@string/bottom_next"/>
    <TextView
        android:id="@+id/favourite_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:drawableLeft="@drawable/fvmusic"
        android:textSize="15dp"
        android:text="@string/bottom_favourite"/>
    <TextView
        android:id="@+id/ring_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:drawableLeft="@drawable/ringmusic"
        android:textSize="15dp"
        android:text="@string/bottom_ring"/>
    <TextView
        android:id="@+id/message_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:drawableLeft="@drawable/dpmusic"
        android:textSize="15dp"
        android:text="@string/bottom_description"/>
    <TextView
        android:id="@+id/delete_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:drawableLeft="@drawable/dtmusic"
        android:textSize="15dp"
        android:text="@string/bottom_delete"/>

</LinearLayout>